--- a/administrador/CSS/estilo.css
+++ b/administrador/CSS/estilo.css
@@ -10,7 +10,11 @@ body{
 .cont {
     height: auto;
 }
-
+#map{
+    width: 70%;
+    margin: auto;
+    height: 30vh;
+}
 /*--------------------------------------------------- Barra lateral ---------------------------------------------------*/
 
 .barra-lateral {
