--- a/cliente/estilo.css
+++ b/cliente/estilo.css
@@ -1,5 +1,8 @@
+*{
+    font-family: sans-serif;
+}
 body{
-    background: radial-gradient(1000px, #2cc6b8,black);
+    background: radial-gradient(1300px, #7bd1df,#000);
     margin: 0px;
 }
 a{
@@ -52,7 +55,7 @@ a{
 .ex{
 	width: 100%;
 	height: 20%;
-	background-color: 18a7a7;
+	background-color: #18a7a7;
 }
 .contenedor_index{
     position: relative;
@@ -94,7 +97,7 @@ a{
     display: none;
 }
 .cabecera {
-    background-color: cadetblue;
+    background-color: #7bd1df;
     width: 100%;
     position: absolute;
     margin: 0px;
