--- a/cliente/estilo.css
+++ b/cliente/estilo.css
@@ -97,28 +97,31 @@ a{
     display: none;
 }
 .cabecera {
-    background-color: #7bd1df;
     width: 100%;
     position: absolute;
     margin: 0px;
 }
 .logo{
-    float: left;
-    width: 19%;
+    display: inline-block;
+    width: 20%;
     text-align: center;
-    border-right: 1px solid black;
 }
 .nombre{
-    float: left;
     width: 60%;
     text-align: center;
+    display: inline-block;
     
 }
 .menu{
-    float: left;
-    width: 19%; 
     text-align: center;
-    border-left: 1px solid black;
+    display: inline-block;
+}
+.menu * *{
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    background-color: aliceblue;
 }
 .boton_superior{
     width: 100%;
@@ -144,7 +147,7 @@ a{
     position: fixed;
     width: 20%;
     background-color: #A9f9f9;
-    border: 2px dashed dodgerblue;
+    border: 2px solid dodgerblue;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     
 }
