--- a/cliente/estilo.css
+++ b/cliente/estilo.css
@@ -137,44 +137,52 @@ a{
 .desplegable{
     overflow: hidden;
     width: 100%;
-    height: 100;
     position: relative;
     padding: auto;
+    cursor: pointer;
 }
 .contenido_desplegable{
     display: none;
     text-align: center;
     position: fixed;
-    width: 20%;
-    background-color: #A9f9f9;
-    border: 2px solid dodgerblue;
+    width: 15%;
+    background-color: #7bf6e6;
+    border: 2px solid #1e90ff;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     
+
 }
 .contenido_desplegable a{
-    float: none;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
-    text-align: center;
-    display: block;
+    background-color: #7bf6e6;
+    border-bottom: 1px #1e90ff solid;
     text-align: left;
+    display: block;
 }
 .desplegable:hover .contenido_desplegable{
-    display: inherit;
+    display: block;
     text-align: center;
+    margin-top: -40px;
+}
+.contenido_desplegable a:hover{
+    background-color: aliceblue;
 }
 .contenido{
-    padding-top: 8%;
+    padding-top: 9%;
 }
 .negocio{
-    border: 1px solid black;
     width: 25%;
     text-align: center;
     margin-left: 6%;
     float: left;
     margin-bottom: 5%;
     background-color: antiquewhite;
+    border-radius: 15px;
+}
+.negocio *{
+    border-radius: 15px;
 }
 .negocio span{
     font-size: 120px;
@@ -184,6 +192,8 @@ a{
     margin-top: 0%;
     padding-top: 3%;
     padding-bottom: 3%;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
 }
 .negocio p{
     background-color: #bdd0e0;
@@ -202,30 +212,35 @@ a{
     width: 80%;
     padding-left: 5%;
     padding-right: 5%;
-    
     margin: auto;
 }
 .catalogo_neg th{
-    background-color: black;
-    color: whitesmoke;
+    background-color: none;
+    color: #000;
     margin: auto;
+    font-size: 24px;
 
 }
 .catalogo_neg td{
-    background-color: lightblue;
+    background-color: none;
     color: black;
     text-align: center;
     padding-bottom: 10px;
     padding-top: 10px;
     width: auto;
     margin: auto;
+    border: 1px solid black;
+    border-radius: 15px;
+    background:  radial-gradient(300px, #7bd1df, #336699);
 }
 .producto_titulo{
-    background-color: blue;
-    color: aliceblue;
+    color: #fff;
+    font-weight: 600;
+    margin-bottom: 15px;
+    background-color: firebrick;
 }
 .producto_imagen img{
-    width: 40%;
+    height: 90px;
 }
 .producto_desc{
     
@@ -261,4 +276,15 @@ a{
     background-color: white;
     margin-left: 62.25%;
     font-size: 30px;
+}
+
+.giro{
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+}
+.direc{
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
 }
