--- a/administrador/CSS/estilo.css
+++ b/administrador/CSS/estilo.css
@@ -6,17 +6,21 @@
     font-family: sans-serif;
 }
 
+section{
+    height: 100vh;
+}
+
 body {
-    background: radial-gradient(1300px, #7bd1df, #000);
     margin: 0px;
     display: block;
 }
 
 .cont {
     height: auto;
-    margin-left: 180px;
+    margin-left: 154px;
     min-width: 300px;
-    margin-top: 2%;
+    padding-top: 2%;
+    background-color: azure;
 }
 
 #map {
@@ -53,7 +57,7 @@ textarea {
     padding-bottom: 7px;
     padding-top: 7px;
     border-radius: 5px;
-    border: 1px solid #041a64;
+    border: 2px solid #000;
     color: black;
     margin-left: auto;
     margin-right: 35px;
@@ -107,12 +111,11 @@ a {
     height: 100vh;
     margin-left: -250px;
     overflow-y: auto;
-    background: #7bd1df;
+    background:linear-gradient( 180deg,#ffffff 0%, #1976d2 100%);
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
-    margin-top: -2%;
     position: fixed;
 }
 
@@ -142,16 +145,17 @@ a {
     text-decoration: none;
     color: black;
 }
-
 .menus li:hover {
     text-decoration: none;
-    background-color: #ccffff;
+    background:linear-gradient(270deg, #9dffa0 0% , #bbdefb 100%);
 
 }
 
+.log-no li:hover {
+    background: linear-gradient(270deg,#e53935 0%, #ffb6d7 100%);
+}
 .menus a:hover {
     color: black;
-    text-shadow: 2px 2px #ccc;
 }
 
 .logo img {
@@ -185,9 +189,7 @@ a {
 
 }
 
-.log-no li:hover {
-    background-color: firebrick;
-}
+
 
 .log-no li:hover {
     color: #fff;
@@ -198,12 +200,11 @@ a {
 /*----------------------------------------------------- Cuenta negocio -----------------------------------------------------*/
 
 .cuenta {
-    background-color: aliceblue;
+    background-color: rgb(187, 197, 230);
+    border: 4px solid #3838ce;
     width: 80%;
     margin: auto;
     margin-top: 25px;
-    background-color: aliceblue;
-    border: none;
     box-sizing: border-box;
     padding: 25px;
     border-radius: 15px;
@@ -228,6 +229,11 @@ a {
 
 /*---------------------------------------------------- Inicio sesion ----------------------------------------------------*/
 
+.cont-login{
+    background: radial-gradient(1300px, #7bd1df,#000);
+    margin-bottom: 0px;
+    padding-bottom: 35px;
+}
 .logo-login img {
     width: 70%;
     display: block;
@@ -240,8 +246,6 @@ a {
     margin-left: auto;
     margin-right: auto;
 }
-
-
 .Formulario-logueo {
     font-size: 17px;
     width: 50%;
@@ -276,12 +280,11 @@ a {
 /*-------------------------------------------------------- Registro --------------------------------------------------------*/
 
 .Registro {
-    background-color: aliceblue;
     width: 60%;
     margin: auto;
     margin-top: 25px;
-    background-color: aliceblue;
-    border: none;
+    background-color: rgb(187, 197, 230);
+    border: 4px solid #3838ce;
     box-sizing: border-box;
     padding: 25px;
     border-radius: 15px;
@@ -321,7 +324,8 @@ a {
 .Ventas,
 .items-hp,
 .formu_cuenta {
-    background-color: aliceblue;
+    background-color: rgb(187, 197, 230);
+    border: 4px solid #3838ce;
 }
 
 .formu_cuenta {
@@ -343,24 +347,89 @@ a {
 .catalogo_neg tr th {
     border-style: none;
 }
+.catalogo_neg th{
+    margin-bottom: 20px;
+}
 
 .catalogo_neg tr td {
-    border-radius: 18px;
-    background-color: aliceblue;
-    border-style: none;
+    border-radius: 15px;
+    background-color: rgb(187, 197, 230);
+    border: 4px solid #3838ce;
     padding: 10px;
     box-sizing: border-box;
-
 }
 
 .catalogo_neg tr td * {
     margin: auto;
     text-align: center;
+    margin-bottom: 5px;
 }
 
 .catal {
     display: relative;
 }
+.switchBtn{
+    margin-top: 1%;
+    position:relative;
+    display:inline-block;
+    width:130px;
+    height: 34px;
+    font-size: 14px;
+    font-weight: bold;
+
+}
+
+.switchBtn input{
+    display:none;
+}
+.slide{
+    position:absolute;
+    cursor:pointer;
+    top:0;
+    left:0;
+    right: 0;
+    bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    background-color: #666;
+    transition:.4s;
+    padding: 8px;
+    color:#fff;
+}
+.slide:before{
+    position: absolute;
+    margin-top: 0;
+    margin-bottom: 0;
+    content: "";
+    height: 27px;
+    width: 27px;
+    left:100px;
+    bottom:4px;
+    background-color: white;
+    transition: .4s;
+}
+input:checked + .slide{
+    background-color: #42a5f5;
+    color: black;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+input:focus + .slide{
+    box-shadow: 0 0 1px #01aeed;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+input:checked + .slide:before{
+    transform: translateX(23px);
+    left:-20px;
+}
+.slide.round{
+    border-radius: 34px;
+}
+.slide.round:before{
+    border-radius: 50%;
+}
+
 
 /* ------------------------------------------------ Agregar producto ------------------------------------------------ */
 
@@ -388,8 +457,8 @@ a {
     width: 80%;
     margin: auto;
     margin-top: 25px;
-    background-color: aliceblue;
-    border: none;
+    background-color: rgb(187, 197, 230);
+    border: 4px solid #3838ce;
     box-sizing: border-box;
     padding: 25px;
     border-radius: 15px;
@@ -409,8 +478,8 @@ a {
     width: 80%;
     margin: auto;
     margin-top: 25px;
-    background-color: aliceblue;
-    border: none;
+    background-color: rgb(187, 197, 230);
+    border: 4px solid #3838ce;
     box-sizing: border-box;
     padding: 25px;
     border-radius: 15px;
